PROJECT(JavascriptEngine)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/thirdlib)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g3 -ggdb")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O3 -Wall")
#使用clang 可能会出现意想不到的错误
#SET(CMAKE_C_COMPILER clang)
ADD_SUBDIRECTORY(libjs)
ADD_SUBDIRECTORY(tshell)
ADD_SUBDIRECTORY(shell)
ADD_SUBDIRECTORY(web)
