INCLUDE_DIRECTORIES(../include)
AUX_SOURCE_DIRECTORY(. DIR_WEB_SRCS)
ADD_EXECUTABLE(web ${DIR_WEB_SRCS})
FIND_PACKAGE(libpthread REQUIRED)
FIND_PACKAGE(libm REQUIRED)
FIND_PACKAGE(libmicrohttpd REQUIRED)
MARK_AS_ADVANCED(

	LIBPTHREAD_INCLUDE_DIR
	LIBPTHREAD_LIBRARIES
	LIBMICROHTTPD_INCLUDE_DIR
	
	LIBM_INCLUDE_DIR
	LIBM_LIBRARIES
	LIBMICROHTTPD_LIBRARIES
)
INCLUDE_DIRECTORIES(${LIBPTHREAD_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBM_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBMICROHTTPD_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(web js ${LIBPTHREAD_LIBRARIES} ${LIBM_LIBRARIES} ${LIBMICROHTTPD_LIBRARIES})